# mysite_dj_DIO

./: build.sh  pyproject.toml
accounts/: urls.py  views.py
accounts/templates/accounts/: login.html
contacts/: forms.py  models.py  urls.py  views.py
contacts/migrations/: 0001_initial.py
contacts/templates/contacts/: create.html  name.html
mysite/: admin.py  settings.py  urls.py
polls/: admin.py  apps.py  models.py  urls.py  views.py
polls/migrations/: 0001_initial.py  0002_question_active.py  0003_alter_choice_options_alter_question_options_and_more.py
polls/templates/polls/: detail.html  index.html  results.html
templates/admin/: base.html
tests/contacts/: test_forms.py  test_views.py
tests/polls/: test_models.py
